# multimodal_pdfs

./: .gitignore  50_add_to_weaviate.py  60_query_weaviate.py  README.md  app.py  docker-compose.yml  helpers.py  pyproject.toml
