[project]
name = "202502-pdf-colpali-demo"
version = "0.1.0"
description = "Demo app showing the power of multimodal models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.45.1",
    "weaviate-client>=4.14.4",
]
